--- a/indexorigin.html
+++ b/indexorigin.html
@@ -40,10 +40,10 @@
                     <div class="col-projects">
 
                         <div class="project-list">
-                            <p>Iraki</p>
-                            <p>Bresha</p>
-                            <p>Akari</p>
-                            <p>Arrow</p>
+                            <p>inicio</p>
+                            <p>sobre mim</p>
+                            <p>trabalhos</p>
+                            <p>contato</p>
                         </div>
 
                         <div class="h-stripe">
